Finished cleaning up generator FaceTransitive.